Tidying up Settings html

--- a/settings.html
+++ b/settings.html
@@ -4,64 +4,157 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>News Manager</title>
+    <title>Snews News Manager</title>
     <link rel="stylesheet" type="text/css" href="css/styles.min.css">
     <link href="https://fonts.googleapis.com/css?family=Droid+Sans:400,700" rel="stylesheet">
   </head>
   <body>
   <div id="container" class="scroll">
     <div class="header">
-      <h2 class="heading">News Manager Settings</h2>
+      <h2 class="heading">Snews News Manager Settings</h2>
       <button class="submit">Save</button>
     </div>
     <div class="inner-wrap">
       <h3>Sources</h3>
       <div class="sources-wrap">
         <div class="column sources">
-          <label><input type="checkbox" class="checkbox" value="cnn" name="sources[cnn]" /> CNN</label>
-          <label><input type="checkbox" class="checkbox" value="wapo" name="sources[wapo]" /> Washington Post</label>
-          <label><input type="checkbox" class="checkbox" value="reuters" name="sources[reuters]" /> Reuters</label>
-          <label><input type="checkbox" class="checkbox" value="mashable" name="sources[mashable]" /> Mashable</label>
-          <label><input type="checkbox" class="checkbox" value="root" name="sources[root]" /> The Root</label>
+          <label>
+            <input type="checkbox" class="checkbox" value="cnn" name="sources[cnn]" />
+            <span>CNN</span>
+          </label>
+          <label>
+            <input type="checkbox" class="checkbox" value="wapo" name="sources[wapo]" />
+            <span>Washington Post</span>
+          </label>
+          <label>
+            <input type="checkbox" class="checkbox" value="reuters" name="sources[reuters]" />
+            <span>Reuters</span>
+          </label>
+          <label>
+            <input type="checkbox" class="checkbox" value="mashable" name="sources[mashable]" />
+            <span>Mashable</span>
+          </label>
+          <label>
+            <input type="checkbox" class="checkbox" value="root" name="sources[root]" />
+            <span>The Root</span>
+          </label>
         </div>
         <div class="column sources">
-          <label><input type="checkbox" class="checkbox" value="gizmodo" name="sources[gizmodo]" /> Gizmodo</label>
-          <label><input type="checkbox" class="checkbox" value="jezebel" name="sources[jezebel]" /> Jezebel</label>
-          <label><input type="checkbox" class="checkbox" value="nytimes" name="sources[nytimes]" /> New York Times</label>
-          <label><input type="checkbox" class="checkbox" value="seattle" name="sources[seattle]" /> Seattle Times</label>
-          <label><input type="checkbox" class="checkbox" value="latimes" name="sources[latimes]" /> LA Times</label>
+          <label>
+            <input type="checkbox" class="checkbox" value="gizmodo" name="sources[gizmodo]" />
+            <span>Gizmodo</span>
+          </label>
+          <label>
+            <input type="checkbox" class="checkbox" value="jezebel" name="sources[jezebel]" />
+            <span>Jezebel</span>
+          </label>
+          <label>
+            <input type="checkbox" class="checkbox" value="nytimes" name="sources[nytimes]" />
+            <span>New York Times</span>
+          </label>
+          <label>
+            <input type="checkbox" class="checkbox" value="seattle" name="sources[seattle]" />
+            <span>Seattle Times</span>
+          </label>
+          <label>
+            <input type="checkbox" class="checkbox" value="latimes" name="sources[latimes]" />
+              <span>LA Times</span>
+          </label>
         </div>
         <div class="column sources">
-          <label><input type="checkbox" class="checkbox" value="denver" name="sources[denver]" /> Denver Post</label>
-          <label><input type="checkbox" class="checkbox" value="chicago" name="sources[chicago]" /> Chicago Times</label>
-          <label><input type="checkbox" class="checkbox" value="pft" name="sources[pft]" /> Pro Football Talk</label>
-          <label><input type="checkbox" class="checkbox" value="gothamist" name="sources[gothamist]" /> The Gothamist</label>
-          <label><input type="checkbox" class="checkbox" value="abc" name="sources[abc]" /> ABC News</label>
+          <label>
+            <input type="checkbox" class="checkbox" value="denver" name="sources[denver]" />
+            <span>Denver Post</span>
+          </label>
+          <label>
+            <input type="checkbox" class="checkbox" value="chicago" name="sources[chicago]" />
+            <span>Chicago Times</span>
+          </label>
+          <label>
+            <input type="checkbox" class="checkbox" value="pft" name="sources[pft]" />
+            <span>Pro Football Talk</span>
+          </label>
+          <label>
+            <input type="checkbox" class="checkbox" value="gothamist" name="sources[gothamist]" />
+            <span>The Gothamist</span>
+          </label>
+          <label>
+            <input type="checkbox" class="checkbox" value="abc" name="sources[abc]" />
+            <span>ABC News</span>
+          </label>
         </div>
       </div>
 
       <div class="sources-wrap">
         <div class="column sources">
-          <label><input type="checkbox" class="checkbox" value="guardian" name="sources[guardian]" /> Guardian</label>
-          <label><input type="checkbox" class="checkbox" value="pbs" name="sources[pbs]" /> PBS</label>
-          <label><input type="checkbox" class="checkbox" value="npr" name="sources[npr]" /> NPR</label>
-          <label><input type="checkbox" class="checkbox" value="bbc" name="sources[bbc]" /> BBC</label>
-          <label><input type="checkbox" class="checkbox" value="slashdot" name="sources[slashdot]" /> Slashdot</label>
+          <label>
+            <input type="checkbox" class="checkbox" value="guardian" name="sources[guardian]" />
+            <span>Guardian</span>
+          </label>
+          <label>
+            <input type="checkbox" class="checkbox" value="pbs" name="sources[pbs]" />
+            <span>PBS</span>
+          </label>
+          <label>
+            <input type="checkbox" class="checkbox" value="npr" name="sources[npr]" />
+            <span>NPR</span>
+          </label>
+          <label>
+            <input type="checkbox" class="checkbox" value="bbc" name="sources[bbc]" />
+            <span>BBC</span>
+          </label>
+          <label>
+            <input type="checkbox" class="checkbox" value="slashdot" name="sources[slashdot]" />
+            <span>Slashdot</span>
+          </label>
         </div>
         <div class="column sources">
-          <label><input type="checkbox" class="checkbox" value="economist" name="sources[economist]" /> The Economist</label>
-          <label><input type="checkbox" class="checkbox" value="slate" name="sources[slate]" /> Slate</label>
-          <label><input type="checkbox" class="checkbox" value="techcrunch" name="sources[techcrunch]" /> Techcrunch</label>
-          <label><input type="checkbox" class="checkbox" value="hacker" name="sources[hacker]" /> Hacker News</label>
-          <label><input type="checkbox" class="checkbox" value="deadspin" name="sources[deadspin]" /> Deadspin</label>
-          <!-- <label><input type="checkbox" class="checkbox" value="jezebel" name="sources[jezebel]" /> Jezebel</label> -->
+          <label>
+            <input type="checkbox" class="checkbox" value="economist" name="sources[economist]" />
+            <span>The Economist</span>
+          </label>
+          <label>
+            <input type="checkbox" class="checkbox" value="slate" name="sources[slate]" />
+            <span>Slate</span>
+          </label>
+          <label>
+            <input type="checkbox" class="checkbox" value="techcrunch" name="sources[techcrunch]" />
+            <span>Techcrunch</span>
+          </label>
+          <label>
+            <input type="checkbox" class="checkbox" value="hacker" name="sources[hacker]" />
+            <span>Hacker News</span>
+          </label>
+          <label>
+            <input type="checkbox" class="checkbox" value="deadspin" name="sources[deadspin]" />
+            <span>Deadspin</span>
+          </label>
         </div>
         <div class="column sources">
-          <label><input type="checkbox" class="checkbox" value="wired" name="sources[wired]" /> Wired</label>
-          <label><input type="checkbox" class="checkbox" value="espn" name="sources[espn]" /> ESPN</label>
-          <label><input type="checkbox" class="checkbox" value="propublica" name="sources[propublica]" /> ProPublica</label>
-          <label><input type="checkbox" class="checkbox" value="time" name="sources[time]" /> Time Magazine</label>
-          <label><input type="checkbox" class="checkbox" value="wallstreet" name="sources[wallstreet]" /> The Wall-Street Journal</label>
+          <label>
+            <input type="checkbox" class="checkbox" value="wired" name="sources[wired]" />
+            <span>Wired</span>
+          </label>
+          <label>
+            <input type="checkbox" class="checkbox" value="espn" name="sources[espn]" />
+            <span>ESPN</span>
+          </label>
+          <label>
+            <input type="checkbox" class="checkbox" value="propublica" name="sources[propublica]" />
+            <span>ProPublica</span>
+          </label>
+          <label>
+            <input type="checkbox" class="checkbox" value="time" name="sources[time]" />
+            <span>Time Magazine</span>
+          </label>
+          <label>
+            <input type="checkbox" class="checkbox" value="wallstreet" name="sources[wallstreet]" />
+            <span>The Wall-Street Journal</span>
+          </label>
+          <label>
+            <input type="checkbox" class="checkbox" value="rt" name="sources[rt]" />
+            <span>RT</span>
+          </label>
         </div>
       </div>
       <br>
